Add update exercise/workout names endpoint
